// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateNew renders 1`] = `
<Connect(ProductContainer)
  productId="abc"
>
  <Component />
</Connect(ProductContainer)>
`;

exports[`CreateNew renders 2`] = `
<div>
  <Connect(EditorContainer)
    product={
      Object {
        "colors": Array [
          Object {
            "color": "#ff0000",
            "name": "red",
          },
          Object {
            "color": "#000000",
            "name": "black",
          },
        ],
        "id": "abc",
        "manufacturer": "abc",
        "name": "Krazy Kite",
        "url": "http://krazykites.com/krazy-kite",
        "variations": Array [
          Object {
            "name": "Standard",
            "svg": "<div>Kool Kite</div>",
          },
        ],
      }
    }
  >
    <Component />
  </Connect(EditorContainer)>
</div>
`;

exports[`CreateNew renders 3`] = `
<div>
  <Connect(UserContainer)>
    <Component />
  </Connect(UserContainer)>
  <styled.div>
    <Sidebar
      appliedColors={Object {}}
      manufacturer={
        Object {
          "id": "abc",
          "logo": "abc.jpg",
          "name": "Krazy Kites",
          "website": "http://krazykites.com",
        }
      }
      onColorSelect={[MockFunction]}
      onVariationSelect={[MockFunction]}
      product={
        Object {
          "colors": Array [
            Object {
              "color": "#ff0000",
              "name": "red",
            },
            Object {
              "color": "#000000",
              "name": "black",
            },
          ],
          "id": "abc",
          "manufacturer": "abc",
          "name": "Krazy Kite",
          "url": "http://krazykites.com/krazy-kite",
          "variations": Array [
            Object {
              "name": "Standard",
              "svg": "<div>Kool Kite</div>",
            },
          ],
        }
      }
      selectedColor="blue"
      selectedVariation="Standard"
    />
    <Canvas
      colorMap={Object {}}
      currentColor="blue"
      onClick={[MockFunction]}
      svg=""
    />
  </styled.div>
</div>
`;

exports[`CreateNew renders 4`] = `
<div>
  <Toolbar
    onBackgroundChange={[Function]}
    onHideOutlines={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onShare={[Function]}
  />
</div>
`;
